[gd_scene load_steps=7 format=3 uid="uid://c5h0xo5axmbxk"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_tk1ha"]
[ext_resource type="PackedScene" uid="uid://mv6hrc7iftrg" path="res://Scenes/HealthComponent.tscn" id="2_w1tya"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_r3yl3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2avj8"]
albedo_color = Color(0.0392157, 0.686275, 0.329412, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bllru"]
size = Vector3(1, 1.99292, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5til4"]
radius = 2.0

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_tk1ha")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_r3yl3")
surface_material_override/0 = SubResource("StandardMaterial3D_2avj8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0020752, 0)
shape = SubResource("BoxShape3D_bllru")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HealthComponent" parent="." instance=ExtResource("2_w1tya")]
max_health = 100

[node name="AttackRadius" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRadius"]
shape = SubResource("CylinderShape3D_5til4")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="died_signal" from="HealthComponent" to="." method="_on_health_died_signal"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
